[package]
name = "nodeindex"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nodeindex"
path = "src/main.rs"

[dependencies]
bindings = { git = "https://github.com/vis-eyth/bitcraft-bindings", rev = "8ad074a14582dfc1940df129d61746cc1c6682b2" }
anyhow = { version = "1.0.98" }
hashbrown = { version = "0.16.0" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["rt", "signal", "macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19"}
axum = { version = "0.8.4" }
tower-http = { version = "0.6.6", features = ["cors", "compression-gzip", "compression-zstd"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = { version = "0.3.30" }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = { version = "1.0" }
